--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -219,6 +219,7 @@
         // Initialize billing fields
         total: null,
         commission: null,
+        discount: null,
         minusCommission: null,
         // Initialize measurement fields
         neckReliefBefore: null,
@@ -751,6 +752,13 @@
                 <input type="number" step="0.01" min="0" id="commission" 
                        value="${currentProject.commission || ''}" 
                        onchange="markChanged(); updateBillingCalculation()" 
+                       placeholder="0.00">
+              </div>
+              <div class="form-group">
+                <label>Discount ($)</label>
+                <input type="number" step="0.01" min="0" id="discount" 
+                       value="${currentProject.discount || ''}" 
+                       onchange="markChanged()" 
                        placeholder="0.00">
               </div>
               <div class="form-group full-width">
@@ -1286,6 +1294,7 @@
           // Billing data
           total: parseFloat(document.getElementById('total').value) || null,
           commission: parseFloat(document.getElementById('commission').value) || null,
+          discount: parseFloat(document.getElementById('discount').value) || null,
           
           // Measurement data
           neckReliefBefore: parseFloat(document.getElementById('neckReliefBefore').value) || null,
@@ -1445,8 +1454,10 @@
     // Billing (if shown)
     const totalEl = document.getElementById('total');
     const commissionEl = document.getElementById('commission');
+    const discountEl = document.getElementById('discount');
     if (totalEl) currentProject.total = totalEl.value ? parseFloat(totalEl.value) : null;
     if (commissionEl) currentProject.commission = commissionEl.value ? parseFloat(commissionEl.value) : null;
+    if (discountEl) currentProject.discount = discountEl.value ? parseFloat(discountEl.value) : null;
 
     // Measurements (only if section expanded—safe to read anyway)
     const num = id => {
