--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -1678,10 +1678,11 @@ currentProject.additionalActions = document.getElementById('additionalActions')?
     // Pull any on-screen edits into the object:
     syncEditorIntoCurrentProject();
 
-    // Attach milestones currently loaded for this project:
+    // Attach milestones and parts currently loaded for this project:
     const payload = {
       project: currentProject,
-      milestones: currentMilestones || []
+      milestones: currentMilestones || [],
+      parts: currentParts || []
     };
 
     // Save to localStorage and pop new window with the estimate:
