--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -38,6 +38,9 @@
     .tab-content.active{display:block}
     .milestone-list{max-height:400px;overflow-y:auto;border:1px solid #ddd;border-radius:4px;padding:10px;background:#fafafa}
     .milestone-row{display:flex;align-items:center;gap:10px;padding:8px;margin-bottom:5px;background:#fff;border-radius:4px;border-left:3px solid #ddd;position:relative}
+    .milestone-include{width:60px;text-align:center;font-size:11px;display:flex;flex-direction:column;align-items:center;gap:2px}
+    .milestone-include input[type="checkbox"]{margin:0;cursor:pointer}
+    .milestone-include label{font-size:10px;color:#666;text-align:center;line-height:1.1}
     .milestone-row.dragging{opacity:.5;z-index:1000}
     .milestone-row.over{outline:2px dashed #2196f3}
     .milestone-row.ready{border-left-color:#4caf50}
@@ -920,6 +923,14 @@
               <option value="Completed" ${milestone.status === 'Completed' ? 'selected' : ''}>Completed</option>
             </select>
           </div>
+          <div class="milestone-include">
+            <input type="checkbox" 
+                   ${(milestone.includeInEstimate !== false) ? 'checked' : ''}
+                   onchange="updateMilestone(${index}, 'includeInEstimate', this.checked)"
+                   id="include-estimate-${index}"
+                   title="Include in customer estimate">
+            <label for="include-estimate-${index}">Bill</label>
+          </div>
           <div class="milestone-actions">
             ${milestone.status === 'Completed' && milestone.actualHours && milestone.id ? 
               `<button class="save-milestone-btn" onclick="saveSingleMilestone(${index})" title="Save to Notion">Save</button>` : 
@@ -1043,7 +1054,8 @@
         estimatedHours: 1,
         actualHours: 0,
         order: currentMilestones.length + 1,
-        status: 'Not Started'
+        status: 'Not Started',
+        includeInEstimate: true
       };
       currentMilestones.push(newMilestone);
       refreshMilestoneList();
@@ -1059,7 +1071,8 @@
           estimatedHours: 1,
           actualHours: 0,
           order: start + i + 1,
-          status: 'Not Started'
+          status: 'Not Started',
+          includeInEstimate: true
         });
       }
       refreshMilestoneList();
