--- a/projects-mobile.html
+++ b/projects-mobile.html
@@ -31,7 +31,6 @@
       background: var(--bg);
       color: var(--text);
       line-height: 1.6;
-      padding-bottom: 80px;
     }
 
     .header {
@@ -39,9 +38,6 @@
       color: white;
       padding: 20px;
       text-align: center;
-      position: sticky;
-      top: 0;
-      z-index: 100;
       box-shadow: 0 2px 8px var(--shadow);
     }
 
@@ -158,16 +154,12 @@
     }
 
     .button-group {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
       background: white;
       padding: 16px;
       box-shadow: 0 -2px 8px var(--shadow);
       display: flex;
       gap: 12px;
-      z-index: 100;
+      margin-top: 20px;
     }
 
     .btn {
@@ -242,7 +234,7 @@
 
     .message {
       position: fixed;
-      top: 80px;
+      top: 20px;
       left: 16px;
       right: 16px;
       padding: 16px;
