--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -1771,7 +1771,7 @@ currentProject.additionalActions = document.getElementById('additionalActions')?
     // Attach milestones currently loaded for this project:
     const payload = {
       project: currentProject,
-      milestones: currentMilestones || []
+      milestones: currentMilestones || [],
       parts: currentParts || []  // ← ADD THIS LINE
     };
 
