--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -762,6 +762,7 @@
                 <select id="tuning" onchange="markChanged()">
                   <option value="">Select Tuning</option>
                   <option value="Standard" ${currentProject.tuning === 'Standard' ? 'selected' : ''}>Standard</option>
+                  <option value="Eb Standard" ${currentProject.tuning === 'Eb Standard' ? 'selected' : ''}>Eb Standard</option>
                   <option value="Drop D" ${currentProject.tuning === 'Drop D' ? 'selected' : ''}>Drop D</option>
                   <option value="Drop C" ${currentProject.tuning === 'Drop C' ? 'selected' : ''}>Drop C</option>
                   <option value="Half Step Down" ${currentProject.tuning === 'Half Step Down' ? 'selected' : ''}>Half Step Down</option>
