--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -598,6 +598,7 @@
                 <option value="On The Bench" ${currentProject.status === 'On The Bench' ? 'selected' : ''}>On The Bench</option>
                 <option value="Waiting" ${currentProject.status === 'Waiting' ? 'selected' : ''}>Waiting</option>
                 <option value="Done" ${currentProject.status === 'Done' ? 'selected' : ''}>Done</option>
+                <option value="Paid" ${currentProject.status === 'Paid' ? 'selected' : ''}>Paid</option>
               </select>
             </div>
             <div class="form-group">
