--- a/project-management-estimate.html
+++ b/project-management-estimate.html
@@ -678,7 +678,7 @@
                 <label>Neck Relief Before</label>
                 <input type="text" id="neckReliefBefore" 
                        value="${currentProject.neckReliefBefore || ''}" 
-                       onchange="markChanged()" placeholder="0.000 or Backbowed">
+                       onchange="markChanged()" placeholder="0.000">
               </div>
               <div class="form-group">
                 <label>1st String at 1st Fret</label>
@@ -712,7 +712,7 @@
                 <label>Neck Relief After</label>
                 <input type="text" id="neckReliefAfter" 
                        value="${currentProject.neckReliefAfter || ''}" 
-                       onchange="markChanged()" placeholder="0.000 or Backbowed">
+                       onchange="markChanged()" placeholder="0.000">
               </div>
               <div class="form-group">
                 <label>1st String at 1st Fret</label>
