--- a/estimate_template.html
+++ b/estimate_template.html
@@ -208,7 +208,7 @@
     <div class="estimate-notes">
       <p><strong>Note:</strong> This is an estimate based on initial assessment. Final charges may vary depending on actual work required and parts needed.</p>
       <p>Estimate valid for 30 days from date of issue.</p>
-      <p>All work guaranteed. Payment due upon completion.</p>
+      <p>Payment due upon completion. If sales tax it not reflected in the estimate, it will be applied when payment is due.</p>
     </div>
   </div>
 
